# CoreGene

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
core_gene/: example_main.cpp
core_gene/shaders/: clip_plane_vertex.glsl  fragment_fog.glsl  lights_fragment.glsl  lit_fragment.glsl  lit_fragment2.glsl  lit_vertex.glsl  lit_vertex2.glsl  n_map_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl  specular_gloss_fragment.glsl  specular_gloss_vertex.glsl  vertex_fog.glsl
core_gene/src/: EnGene.h  node.h  scene.h  scene_old.h  scene_visitor.h
core_gene/src/3d/: 3dcamera.h  camera.h  camera3d.h  directional_light.h  light.h  orthographic_camera.h  perpective_camera.h  point_light.h  spot_light.h
core_gene/src/3d/camera/: camera.h  camera3d.h  orthographic_camera.h  perpective_camera.h  perspective_camera.h
core_gene/src/3d/lights/: directional_light.h  light.h  light_config.h  light_data.h  light_manager.h  point_light.h  spot_light.h
core_gene/src/components/: all.h  clip_plane_component.h  component.h  component_collection.h  cubemap_component.h  framebuffer_component.h  geometry_component.h  light_component.h  material_component.h  observed_transform_component.h  shader_component.h  skybox_component.h  texture_component.h  transform_component.h  variable_component.h
core_gene/src/core/: EnGene_config.h  node.h  node_builder.h  scene.h  scene_node_builder.h
core_gene/src/exceptions/: base_exception.h  framebuffer_exception.h  node_not_found_exception.h  shader_exception.h  texture_exception.h
core_gene/src/gl_base/: cubemap.h  error.h  framebuffer.h  geometry.h  i_shader.h  input_handler.h  input_handlers.h  material.h  shader.h  skybox_cube.h  texture.h  transform.h  uniform.h
core_gene/src/gl_base/uniforms/: array_ssbo.h  global_resource_manager.h  pending_uniform_command.h  shader_resource.h  struct_resource.h  struct_ssbo.h  ubo.h  uniform.h
core_gene/src/other_genes/: basic_input_handler.h  environment_mapping.h  grid.h
core_gene/src/other_genes/3d_shapes/: cube.h  cylinder.h  sphere.h
core_gene/src/other_genes/input_handlers/: arcball_controller.h  arcball_input_handler.h
core_gene/src/other_genes/shapes/: polygon.h
core_gene/src/other_genes/textured_shapes/: quad.h  textured_circle.h
core_gene/src/shapes/: circle.h  polygon.h
core_gene/src/utils/: observer_interface.h
other_genes/: environment_mapping.h
test/: CMakeLists.txt  chromatic_dispersion_test.cpp  fresnel_test.cpp  reflection_test.cpp  refraction_test.cpp  simple_engene_test.cpp  skybox_test.cpp  specular_gloss_test.cpp
test/proj2/: CMakeLists.txt  README.md  proj2-mix.cpp
test/proj2/shaders/: phong.frag
